# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("vidserver") {
  testonly = true

  sources = [
    "vidserver.cc",
  ]

  deps = [
    "//base",
    "//content",
    "//ui/views_content_client",
    "//net:test_support",
    "//ui/views/examples:copy_content_resources"
  ]
}
